test/expected/explain_udl__i.out
explain int operator"" _x()
                          ^
27: syntax error: ")": '(' expected
